--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -47,7 +47,7 @@ html(lang="en")
                         </div>
                         <div class="friend-filter__name">{{this.first_name}} {{this.last_name}}</div>
                         <div class="friend-filter__button">
-                            <div class="friend-filter__add"></div>
+                            <div class="friend-filter__button-icon"></div>
                         </div>
                     </li> {{/each}}
         //- переносить each нельзя
